testsuite/poke.pkl/struct-field-pretty-print-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    int lala;
    fun _print_lala = int: { return 0; } /* { dg-error "should be of type" } */
  };
